@@ -37,6 +37,7 @@
 
 - Fixed a missing type specifier in a function declaration of the RACF kernel
 - Fixed a condition that caused a hybrid attack using a maskfile to not select all wordlists from a wordlist folder
+- Fixed a memory leak that is present when a user is periodically printing hashcat status (using --status-timer)
 
 ##
 ## Technical
